add login & signUp feature

--- a/ADMIN/index.html
+++ b/ADMIN/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/assets/logo/logo.png" />
+    <link rel="icon" type="image/svg+xml" href="./src/assets/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CHEIF'S PLACE</title>
+    <title>CHEIF'S ADMIN</title>
   </head>
-  <body>
+  <body class="bg-gray-950 text-slate-100" >
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
